Create ListCmd class